apps/base/hermes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hermes
  labels:
    app: hermes
    http-ingress: "false"
